# nn-rust-vs-python

./: .gitignore  README.md
nn-py/: main.py  plot.py
nn-py/data/: python.txt  rust.txt
nn-rs/: Cargo.toml  rust.txt
nn-rs/src/: main.rs
