[package]
name = "nn-rs"
version = "0.1.0"
authors = ["Allan Reyes <allan_bassail@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.1"
ndarray-rand = "0.14.0"
rand = "0.8.3"
rand_pcg = "0.3.0"